fix: resolve overflow issue on glass component

--- a/styles/Home.css
+++ b/styles/Home.css
@@ -1,7 +1,9 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Tapestry&display=swap'); */
-
+*{
+    overflow-x: hidden;
+}
 .font-bree {
     font-family: 'Bree Serif', serif;
 }
